--- a/jemdoc.css
+++ b/jemdoc.css
@@ -2,7 +2,7 @@ table#tlayout {
 	background: white; border: currentColor; border-image: none; border-collapse: separate;
 }
 body {
-	background: white; margin: 0px; padding-bottom: 8px; font-family:"Times New Roman", Times, serif; font-size: 1.25em;
+	background: white; margin: 0px; padding-bottom: 8px; font-family:"Arial", Times, serif; font-size: 1.25em;
 }
 #layout-menu {
 	background: rgb(246, 246, 246); border: 1px solid rgb(221, 221, 221); border-image: none; width: auto; text-align: left; padding-top: 0.5em; padding-right: 8px; padding-left: 8px; font-size: 1em; vertical-align: top; white-space: nowrap;
